v3.1.4:
  - Fix shifts conversion in subsets: Scipion-Relion and viceversa
  - Export pseudo to coordinates removed completely
  - Apply operation works on non extracted pseudo subtomograms
  - Dataviewer shows Pseudosubtomograms better.
  - Import coordinates from star: fix scheduling (indirect pointer to precedents)
  - Prepare data:
      Fix scheduling (indirect pointer to ts from fiducials)
      Shifts in z and x are now taken from tomogram origin and into imod files
      Tilt series input is now mandatory until we manage to get the right one though the other inputs.

v3.1.3:
  - Fix: Use one of the halves map in auto-refine if it exists
  - Fix: LandMark model generation in prepare when a join coordinates has happened. Sorting issue.
  - Reconstruct does not generate PseudoSubtomograms.
  - Option to "consider angles as priors" in refine and 3d classification
  - Takes into account tomogram shift (X,  Z) in prepare
v3.1.2:
  - Fix: Fiducial size in prepare is now correct (in Å)
  - Make pseudo subtomograms: float 16 is False by default and hidden. Prevents manual subsets.
v3.1.0:
  - First plugin release
